--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     <!-- This is the header content. It contains Logo and links -->
     <div id="logo"> <!-- <img src="logoImage.png" alt="sample logo"> --> 
       <!-- Company Logo text --> 
-      LOGO </div>
+      architect nyan </div>
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Cart</a></div>
   </header>
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
-    <h2>OFFER 50%</h2>
-    <p>REALLY AWESOME DISCOUNTS THIS JULY</p>
+    <h2>Energy symilation</h2>
+    <p>grashooper to GA</p>
   </section>
   <div id="content">
     <section class="sidebar"> 
       <!-- This adds a sidebar with 1 searchbox,2 menusets, each with 4 links -->
-      <input type="text"  id="search" value="search">
+      <input type="Text"  id="search" value="わからない">
       <div id="menubar">
         <nav class="menu">
           <h2><!-- Title for menuset 1 -->MENU ITEM 1 </h2>
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="#" title="Link">Link 1</a></li>
-            <li><a href="#" title="Link">Link 2</a></li>
-            <li><a href="#" title="Link">Link 3</a></li>
+            <li><a href="#" title="Link">diva</a></li>
+            <li><a href="#" title="Link">CFD</a></li>
+            <li><a href="#" title="Link">hany bee</a></li>
             <li class="notimp"><!-- notimp class is applied to remove this link from the tablet and phone views --><a href="#"  title="Link">Link 4</a></li>
           </ul>
         </nav>
